.metadata/.plugins/org.eclipse.cdt.ui/args.build.log
01:16:38 **** Rebuild of configuration Debug for project args ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c:11:23: error: expected ';', ',' or ')' before '...' token
 int f1 (int n, double ...);
                       ^
..\main.c: In function 'main':
..\main.c:20:2: warning: implicit declaration of function 'f1' [-Wimplicit-function-declaration]
  f1(5, 1, 2 , 3, 4 ,5);
  ^

01:16:38 Build Finished (took 149ms)

